# ecg-watermarking

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
Code/: algo_base.py  db.py  edf.py  errors.py  main.py  pyproject.toml  util.py  wm.py  wm_de.py  wm_itb.py  wm_lcb.py  wm_lsb.py  wm_pee.py  wm_test.py
Code/coders/: __init__.py  base.py  huffman.py  rle.py
Code/coding/: __init__.py  base.py  huffman.py  rle.py
Code/predictors/: __init__.py  base.py  chan.py  depchan.py  neigh.py
Code/records/: __init__.py  base.py  edf.py  record.py  wfdb.py
Code/test/: test_wm.py
Code/wm/: __init__.py  base.py  de.py  itb.py  lcb.py  lsb.py  pee.py  rcm.py
Data/: ecg1.edf  ecg2.edf  ecg3.edf  ecg4.edf  ecg5.edf  eeg3.edf  links.txt  res-template.csv
Data/exp1/: readme.txt  res-de.csv  res-lsb.csv  s02.edf  s03.edf  s04.edf  s05.edf  s06.edf  s07.edf  s08.edf  s09.edf  s10.edf
Data/exp2/: eeg.edf  readme.txt  res.csv
Data/exp3/: res.csv
results/: compression.csv  embedding.csv  prediction.csv
tswm/: db.py  errors.py  main.py
tswm/coders/: huffman.py
tswm/predictors/: base.py  neighchan.py
tswm/records/: __init__.py  base.py  edf.py  wfdb.py
tswm/test/: test_wm.py
tswm/wm/: base.py  lcb.py  lsb.py  pee.py
